--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
                     HwangDaEun<br>Web Publisher
                 </div>
                 <div class="footer_social">
-                    <a href="https://github.com/daeun1205">Github</a>
+                    Github
                 </div>
             </div>
         </footer>
