--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
         <!-- header -->
         <header class="header">
             <div class="name" data-aos="fade-down" data-aos-duration="2000" data-aos-offset="100" data-aos-delay="50">
-                <p>HWANG DA EUN</p>
+                <p>DaEun's Portfolio</p>
             </div>
-            <div class="portfolio" data-aos="fade-down" data-aos-duration="2000" data-aos-offset="100" data-aos-delay="200">
-                <p>WEB PORTFOLIO<br>2022</p>
-            </div>
-            <div class="address" data-aos="fade-down" data-aos-duration="2000" data-aos-offset="100" data-aos-delay="300">
-                <p>경기도 고양시,<br>일산서구</p>
-            </div>
+            <!-- <div class="portfolio" data-aos="fade-down" data-aos-duration="2000" data-aos-offset="100" data-aos-delay="200">
+                <p>WEB PORTFOLIO<br>2025</p>
+            </div> -->
+            <!-- <div class="address" data-aos="fade-down" data-aos-duration="2000" data-aos-offset="100" data-aos-delay="300">
+                <p>경기도 파주시</p>
+            </div> -->
             <div class="menu" data-aos="fade-down" data-aos-duration="2000" data-aos-offset="100" data-aos-delay="300">
                 <a href="#none" class="menu_btn">menu</a>
             </div>
@@ -51,9 +51,9 @@
                         <p>WELCOME<br />TO</p>
                     </div>
                 </div>
-                <div class="banner_profile" data-aos="zoom-in" data-aos-duration="1500" data-aos-offset="0">
+                <!-- <div class="banner_profile" data-aos="zoom-in" data-aos-duration="1500" data-aos-offset="0">
                     <img src="./img/프로필사진.jpg" alt="">
-                </div>
+                </div> -->
                 <div class="banner_left_b">
                     <div class="banner_left_b_l" data-aos="fade-down" data-aos-duration="1500" data-aos-offset="-100" data-aos-delay="500">
                         <img src="./img/arrow_btn.svg" alt="arrow버튼">
@@ -120,6 +120,16 @@
                                         <strong>2021.07 - 2022.06</strong>
                                         <br>
                                         <p>컴퓨터아카데미 웹퍼블리싱 과정 수료</p>
+                                    </dd>
+                                </dl>
+                                <dl class="work" data-aos="fade-up" data-aos-duration="1500" data-aos-offset="0">
+                                    <dt>
+                                        <strong>WORK</strong>
+                                    </dt>
+                                    <dd>
+                                        <strong>2023.02 - 2025.04</strong>
+                                        <br>
+                                        <p>(주)메이븐디 웹 퍼블리셔</p>
                                     </dd>
                                 </dl>
                             </div>
